# mcp-analyst

./: README.md  analyst.py  hello.py  pyproject.toml
mcp_analyst/: analyst.py
