[project]
name = "mcp-analyst"
version = "0.2.0"
description = "MCP server for data analysis. It provides a set of tools for data analysis on local CSV or Parquet files."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp[cli]>=1.6.0",
    "polars>=1.26.0",
]

[project.scripts]
mcp-analyst = "mcp_analyst.analyst:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["mcp_analyst*"]
exclude = ["data*", "stock_data*", "tests*"]

[dependency-groups]
dev = [
    "twine>=6.1.0",
]
